<resources>
    <string name="app_name">Planer</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="logged_in">Logged in!</string>
    <string name="log_out">log out</string>
    <string name="current_user">%currUser%</string>

    <string name="search">Search</string>
    <string name="favourite">Favourite</string>

    <string name="fav_false">false</string>
    <string name="fav_true">true</string>

    <!-- Temporary Change to redirect to currency page -->
    <string name="profile">Profile</string>


    <string name="passport_held">Passport Held</string>
    <string name="destination">Destination Country</string>

    <string name="score">Score</string>
    <string name="airport">Airport</string>
    <string name="visa">Visa</string>
    <string name="restriction">Travel/Covid Restriction</string>
    <string name="weather">Weather</string>
    <string name="currency">Currency</string>
    <string name="loading">Loading....</string>

    <string name="visa_free">Visa Free</string>

    <string name="covid">Covid</string>
    <string name="no_restrictions">No Restrictions</string>
    <string name="risk_level">Risk Level</string>
    <string name="normal">take normal precautions</string>
    <string name="placeholder_weather_activity">Weather page showing current weather, forecast, description of season conditions.</string>
    <string name="country_name">%CountryName%</string>
    <string name="current_date">%CurrentDate%</string>

    <!-- Used in Register and Main page -->
    <string name="username">Username</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="enter_your_password_again">Confirm your password</string>
    <string name="country">Country</string>

    <!-- Used in CurrencyConverter page -->
    <string name="home">Home Country</string>
    <string name="usernamePlaceholder">%username%</string>
    <string name="profile_pic_frame">ProfilePicFrame</string>
    <string name="update">update</string>
    <string name="profile_picture">profile picture</string>


    <!-- Used in WeatherActivity page -->
    <string name="city">City</string>
    <string name="no_city">City cannot be empty</string>
    <string name="weather_results">Please select a city above</string>
    <string name="refresh">refresh</string>
    <string name="weather_graphic">weather graphic</string>
    <string name="zero">0</string>
    <string name="get_weather">get weather</string>
    <string name="home_country">Home Country</string>
    <string name="select_image">select image</string>
    <string name="save_changes">save changes</string>
    <string name="select_a_new_image">Select a new image</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="current_weather">Current Weather</string>

    <!-- Used in Search Fragment -->
    <string name="score_description_title">Scoring</string>
    <string name="score_description_content">Score are calculated based on visa requirement,
        current travel restrictions, and current weather conditions.\n\n
        The system will then give you a color-coded recommendation, which suggests how convenient
        it is for you to visit this country. Recommendation is divided into 4 levels:\n
        - <b>Strongly recommended - <font color="green">GREEN</font></b>\nYou can easily go into this country and the weather
        condition is nice for travelling.\n
        - <b>Recommended - <font color="blue">BLUE</font></b>\nYou can go into this country and the weather condition is suitable
        for travelling.\n
        - <b>Urgency only - <font color="#ff6347">ORANGE</font></b>\nYou shouldn\'t go to this country unless necessary because of
        restrictions or bad weather.\n
        - <b>Not recommended - <font color="grey">GREY</font></b>\nYou shouldn\'t go to this country because of strict restrictions
        or bad weather.</string>
    <string name="visa_description_title">Visa</string>
    <string name="visa_description_content">Shows the type of visa you need when visiting this
        country.\n\nFor visa-free regimes, the number of visa-free days is specified whenever
        available. When not available (for example, in some EU countries days are not limited),
        \'visa free\' is shown.\n\nSource: https://www.passportindex.org.</string>
    <string name="airport_description_title">Airport</string>
    <string name="airport_description_content">Shows the biggest airport (in name and code) in
        each country.\n\nSource: https://www.everycountryintheworld.com/airports/</string>

    <!-- Used in Favourite Fragment -->
    <string name="sort_method">Sort method</string>
    <string name="from_a_to_z">From A to Z</string>
    <string name="from_z_to_a">From Z to A</string>

    <!-- Used in Travel Restriction Activity -->
    <string name="travel_and_covid_restrictions">Travel and Covid Restrictions</string>
    <string name="more_details_about_risk_levels">More Details about Risk Levels</string>
    <string name="normal_precautions">Take normal security precautions</string>
    <string name="normal_precaution_description">Take similar precautions to those you would take in your country.</string>
    <string name="high_degree_of_caution">Exercise a high degree of caution</string>
    <string name="high_degree_of_caution_description">Be very cautious at all times, monitor local media and follow the instructions of local authorities.</string>
    <string name="avoid_non_essential_travel">Avoid non-essential travel</string>
    <string name="avoid_non_essential_travel_description">Your safety and security could be at risk. You should think about your need to travel to this country.</string>
    <string name="avoid_all_travel">Avoid all travel</string>
    <string name="avoid_all_travel_description">You should not travel to this country as your personal safety and security are at great risk.</string>

</resources>
