<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="0dp"
    android:layout_marginVertical="0dp"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="wrap_content"
        android:layout_height="267dp"
        android:importantForAccessibility="no"
        android:scaleType="fitCenter"
        android:src="@drawable/planer_no_background"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/email_input_field"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_logo">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="22sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:autofillHints=""
            android:background="@drawable/input_background"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="10dp"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/password_input_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_input_field">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="22sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:autofillHints=""
            android:background="@drawable/input_background"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:paddingHorizontal="10dp"
            android:textSize="24sp" />
    </LinearLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="116dp"
        android:layout_height="63dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginEnd="44dp"
        android:onClick="signIn"
        android:text="@string/log_in"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_input_field"
        app:layout_constraintVertical_bias="0.429" />

    <Button
        android:id="@+id/sign_up_btn"
        android:layout_width="116dp"
        android:layout_height="63dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginStart="44dp"
        android:onClick="signUp"
        android:text="@string/sign_up"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_input_field"
        app:layout_constraintVertical_bias="0.429" />
</androidx.constraintlayout.widget.ConstraintLayout>
